<resources>
    <string name="app_name">Layout</string>
    <string name="textview">TextView</string>
    <string name="enter_now">Enter Now</string>
    <string name="button">Button</string>
    <string name="vatsal">vatsal</string>
    <string name="button_sample">Button</string>
    <string name="textview_sample">TextView</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="button4">Button</string>
</resources>